feat: Media Upload

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
+    "@types/streamifier": "^0.1.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "compression": "^1.7.4",
     "config": "^3.3.12",
     "cors": "^2.8.5",
@@ -64,6 +66,7 @@
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
     "reflect-metadata": "^0.2.2",
+    "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
